tdf#142367 Writer crashes when opening docx

regression from
    commit 5aa60be574ece81b27c8f63e6e809871c694dba0
    fix leak in VCLXWindow

Make SwAnnotationWin follow the same pattern as all the other code and
return a custom accessibility object instead of trying to override the
toolkit peer object.

Change-Id: Ifa3a5da2fbbf082e6bb05281cc9d354d6ec3ba03
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115805
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>